Refactorización de PersonaServiceTest y TipoPersonaServiceTest para mejorar la legibilidad y el mantenimiento.
- Se actualizaron los métodos de prueba para usar métodos auxiliares para crear objetos de ejemplo.
- Se modificaron las aserciones para usar valores RUT formateados.
- Se mejoraron los comportamientos de prueba para mayor claridad en las pruebas.
- Se añadieron pruebas para nuevos escenarios, incluyendo entidades inexistentes y RUT duplicados.
- Se mejoraron los comentarios para una mejor comprensión de la lógica de las pruebas.